FIX Only hide overflow from inactive chosen fields

--- a/client/src/styles/_chosen.scss
+++ b/client/src/styles/_chosen.scss
@@ -5,10 +5,6 @@
 }
 
 // Avoid chosen dropdowns overflowing when not active
-.chosen-container {
+.chosen-container:not(.chosen-container-active) {
   overflow: hidden;
-
-  &.chosen-with-drop {
-    overflow: visible;
-  }
 }
